# Deeplearning.ai

./: Basic_principles.ipynb  Iterative Prompting.ipynb  README.md  Summarizing and Inferring.ipynb  Transforming and Expanding.ipynb
1. Advanced Retrieval with ChromaDB/: 1. Overview of embeddings-based retrieval.ipynb
2. LangChain For LLM Application Dev/: L1-Models_Prompts_Parsers.ipynb  L2-Memory.ipynb  L3-Chains.ipynb  evaluation notes.txt
3. LangChain Chat with your Data/: 06_chat.ipynb
4. LangChain Functions Tools & Agents/: Agent.ipynb  L4-tagging-and-extraction-student.ipynb  L5-tools-routing-apis-student.ipynb
5. Long-Term Agentic Memory With LangGraph/: L1 Email Agent.ipynb  L2 Email Agent Semantic Memory.ipynb  L3 Email Agent Semantic + Episodic Memory.ipynb  L5 Email Assistant with Semantic + Episodic + Procedural Memory.ipynb
6. Computer Use with Anthropic/: Function calling or Tool Calling.ipynb  Real World Prompting ( zero shot, n-shot, CoT ).ipynb  Working with Claude API.ipynb  (+1 more)
7. MCP Build Rich-Context AI Apps with Anthropic/: Client.ipynb  L3-ChatBot Example.ipynb  L4-Creating an MCP Server.ipynb  L5-Creating an MCP Client.ipynb  L6-Connect MCP Chatbot to Reference Servers.ipynb  Weather_Server.py  client.py  main.py  pyproject.toml  research_server.py
7. MCP Build Rich-Context AI Apps with Anthropic/mcp-client/: pyproject.toml
7. MCP Build Rich-Context AI Apps with Anthropic/papers/agentic_ai_in_protein_sequences/: papers_info.json
7. MCP Build Rich-Context AI Apps with Anthropic/papers/rag_pipelines/: papers_info.json
(+55 files in other folders)
