[project]
name = "7-mcp-build-rich-context-ai-apps-with-anthropic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
]

[tool.uv.workspace]
members = [
    "mcp-client",
]
